# personal-bookmark

./: Cargo.toml  LearningActix.md  LearningTailwind.md  Readme.md
src/: api.rs  app_scope.rs  file.rs  main.rs  markdown_to_html.rs  note.rs
static/: index.html
static/about/: index.html
static/book-list/: index.html
static/explore/: index.html
static/login/: index.html
static/test_note/: index.html
template/: note_bottom.txt  note_content.json  note_middle.txt  note_toc.json  note_top.txt
tinker/: partition-generator.py
